--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Sociedade Esportiva Palmeiras</title>
-  <link rel="stylesheet" href="../estilos/layout.css">
+  <link rel="stylesheet" href="estilos/layout.css">
 </head>
 <body>
   <header>
-    <img src="../imagens/LF .SEP.png" alt="Logo do site" class="logo">
+    <img src="imagens/LF .SEP.png" alt="Logo do site" class="logo">
     <h1>Sociedade Esportiva Palmeiras</h1>
 
     <nav>
